--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,21 @@
     -->
     <title>Development blog jurtle</title>
   </head>
-  <body>
+  <body class="preload">
+    <!-- 애니메이션 preload를 방지 합니다 -->
+    <style>
+      .preload * {
+        -webkit-transition: none !important;
+        -moz-transition: none !important;
+        -ms-transition: none !important;
+        -o-transition: none !important;
+      }
+    </style>
+    <script>
+      window.onload = function () {
+        document.body.classList.remove("preload");
+      }
+    </script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
